--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,8 +74,28 @@
         letter-spacing: 2px;
     }
     .container .menu{
-        float: right;
-        line-height: 70px;
+        display: flex;
+        align-items: center;
+    }
+    .container #menu-user h2{
+        color: white;
+        font-size: 2rem;
+    }
+    .container #menu-user{
+        display: none;
+    }
+    .container #menu-user i {
+        color: white;
+        font-size: 24px;
+        margin-left: 10px;
+    }
+    .container #menu-user .dropdown-menu{
+        background-color: rgba(0, 0, 0, .9);
+        padding: 0 10px;
+        border-radius: 5px;
+        position: absolute;
+        top: 80px;
+        display: none;
     }
     .container .menu a{
         display: inline-block;
@@ -93,7 +113,7 @@
     }
     /*Buscador*/
     .barra-busqueda{
-        width: 500px;
+        width: 450px;
         height: 32px;
         padding: 0 15px;
         border:none;
@@ -371,7 +391,8 @@
         color:white;
         box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.8);
     }
-    .registro h4{
+
+    .registro h4, .registro h1{
         text-align: center;
         font-size: 32px;
         margin-bottom: 30px;
@@ -612,6 +633,28 @@
         margin-top: 10px;
         font-size: 1.2rem;
     }
+    .logout{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 200px;
+        color: white;
+    }
+    .logout h1{
+        font-size: 2rem;
+        margin-bottom: 40px;
+    }
+    .logout a{
+        color: white;
+        font-size: 1.2rem;
+        margin: 0 10px;
+    }
+    .logout a:hover {
+        color: rgb(43, 188, 214);
+        text-decoration: underline;
+    }
 
     /* Ajuste de dispositivos */
     @media (max-width:1180px){
@@ -650,6 +693,9 @@
         .game-box{
             width: 100%;
         }
+        .container #menu-user .dropdown-menu{
+            top: 155px;
+        }
     }
     @media (max-width:700px){
         .oscuro{
@@ -657,6 +703,10 @@
         }
         .imagen-principal p {
             display: none;
+        }
+        .imagen-principal {
+            margin-top: 50px;
+            height: 340px;
         }
         .oscuro1 , .oscuro2 {
             padding: 20px 30px;
